Fixed clerk z-index

--- a/application/stylus/molecules/clerk.styl
+++ b/application/stylus/molecules/clerk.styl
@@ -10,6 +10,7 @@ clerkMargin(container, margin=clerk-margin)
 
 //  CLERK
 #clerk
+  z-index: 100
   makeAbsolute: 0 0
   width: clerk-width
   height: clerk-width
